# hello_lib

./: CMakeLists.txt  readme.md
lib/: CMakeLists.txt
lib/include/: hello.h
lib/src/: hello.cpp
